<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:gravity="top" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        style="?android:attr/actionBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textDayInWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/widget_text_day"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDayAndMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textDayInWeek"
            android:layout_marginLeft="5dp"
            android:text="@string/widget_text_date"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonEV"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/widget_text_english"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/buttonFavourite"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/widget_button_desc_favourite"
            android:src="@drawable/widget_not_rating" />

        <ImageButton
            android:id="@+id/buttonRandom"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/widget_button_desc_random"
            android:src="@drawable/widget_random" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout1"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textSaying"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/widget_text_saying"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAuthor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/widget_text_author"
            android:textColor="#FFFFFF"
            android:textStyle="italic|bold" />
    </LinearLayout>

</RelativeLayout>