<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_item"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/buttonLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gnome_favorites"
            android:contentDescription="@string/button_desc_love" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/viet"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textIsSelectable="true"
                android:typeface="serif" />

            <TextView
                android:id="@+id/anh1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textIsSelectable="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tacgia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@android:color/darker_gray"
                android:textIsSelectable="false"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:gravity="right"
        android:orientation="horizontal" >
        
        <ImageButton 
            android:id="@+id/buttonOtherShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_desc_other_share" 
            android:background="@drawable/share"/>

        <ImageButton
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@drawable/facebook"
            android:contentDescription="@string/button_desc_share" />
    </LinearLayout>

</LinearLayout>